 2012-02-15 10:03  dimitr 
   M src/jrd/exe.cpp
   M src/jrd/met.epp
   M src/jrd/met_proto.h
Fixed CORE-3761: Conversion error when using a blob as an argument for the EXCEPTION statement.

 2012-01-23 18:17  dimitr 
   M src/remote/protocol.cpp
Backported CORE-3730: isc_dsql_exec_immed2() loses input parameter value with RETURNING clause.

 2012-01-19 15:34  alexpeshkoff 
   M src/jrd/opt.cpp
Backported fix for CORE-3736: WITH LOCK clause is allowed for users with read-only rights on some table, thus blocking others from updating this table

 2012-01-18 12:05  alexpeshkoff 
   M src/burp/restore.epp
Backported fix for CORE-3733: GBAK fails to fix system generators while restoring

 2012-01-11 11:47  alexpeshkoff 
   M src/remote/inet.cpp
Fixed CORE-3724: Server hangs when working with events

 2012-01-10 05:26  dimitr 
   M src/jrd/Optimizer.cpp
The simplest possible fix for CORE-3722: IS NOT DISTINCT FROM NULL doesn't use index.

 2011-12-30 14:12  alexpeshkoff 
   M src/utilities/fbsvcmgr.cpp
Backported fix for CORE-3658: FBSVCMGR connects to server as OS user name rather than value of ISC_USER environment variable

 2011-12-27 12:45  alexpeshkoff 
   M builds/posix/Makefile.in.client.gbak
   M builds/posix/Makefile.in.client.gdef
   M builds/posix/Makefile.in.client.gfix
   M builds/posix/Makefile.in.client.gpre
   M builds/posix/Makefile.in.client.gsec
   M builds/posix/Makefile.in.client.isql
   M builds/posix/Makefile.in.client.qli
   M builds/posix/Makefile.in.client.util
   M builds/posix/Makefile.in.embed.gbak
   M builds/posix/Makefile.in.embed.gdef
   M builds/posix/Makefile.in.embed.gfix
   M builds/posix/Makefile.in.embed.gpre
   M builds/posix/Makefile.in.embed.isql
   M builds/posix/Makefile.in.embed.qli
   M builds/posix/Makefile.in.embed.util
   M builds/posix/Makefile.in.fbserver
   M builds/posix/Makefile.in.inet_server
   A builds/posix/empty.vers
   M builds/posix/make.defaults